Add iCanteen code to canteen.go
